--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
         }
 
         h4 {
-            font-family: "STKaiti";
+            font-family: "Cursive", "Arial", "Times New Roman";
             font-size: 40px;
             color: #f584b7;
             position: relative;
             top: -70px;
-            left: -65px;
+            left: -40px;
         }
     </style>
 </head>
 
 <body>
     <div id="child">
-        <h4>Hoàng Thị Bích Đào</h4>
+        <h4>❤ Bích Đào ❤ </h4>
     </div>
     <!--这里写名字❤！！！-->
     <canvas id="pinkboard"></canvas>
